--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+git remote add origin https://github.com/DillonFuchs/dillonfuchs.github.io.git
+git push -u origin master
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -14,6 +17,7 @@
         <ul class="menu">
           <li class="menu-text">Blog</li>
           <li><a href="#">One</a></li>
+            <h1>Dillon Fuchs's Resume</h1>
           <li><a href="#">Two</a></li>
           <li><a href="#">Three</a></li>
         </ul>
@@ -23,7 +27,7 @@
 
     <div class="callout large primary">
       <div class="row column text-center">
-        <h1>Our Blog</h1>
+        <h1>Dillon Fuchs's Resume</h1>
         <h2 class="subheader">Such a Simple Blog Layout</h2>
       </div>
     </div>
@@ -86,3 +90,4 @@
     </script>
   </body>
 </html>
+
