--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
           <div class="row column">
             <br>
-            <img class="thumbnail" src="https://placehold.it/550x350">
-            <h5>Mike Mikerson</h5>
-            <p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
+            <img class="thumbnail" src="face.jpg">
+            <h5>Dillon Fuchs</h5>
+            <p>Louisiana State University<p>
+            <p>B.S. Information Systems and Decision Sciences</p>
+            <p>Data Analytics Minor</p>
           </div>
         </div>
 
@@ -24,13 +26,13 @@
           <div class="title-bar hide-for-large">
             <div class="title-bar-left">
               <button class="menu-icon" type="button" data-open="my-info"></button>
-              <span class="title-bar-title">Mike Mikerson</span>
+              <span class="title-bar-title">Dillon Fuchs</span>
             </div>
           </div>
           <div class="callout primary">
             <div class="row column">
-              <h1>Hello! This is the portfolio of a very witty person.</h1>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
+              <h1>Resume of Dillon Fuchs</h1>
+              <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics with hopes to move into Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
             </div>
           </div>
           <div class="row small-up-2 medium-up-3 large-up-4">
