--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Dillon Fuchs Resume</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
   <body>
@@ -14,11 +14,11 @@
         <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
           <div class="row column">
             <br>
-            <img class="thumbnail" src="face.jpg">
+            <img class="thumbnail" src="https://media-exp1.licdn.com/dms/image/C4E03AQFdhPg_89zfOA/profile-displayphoto-shrink_200_200/0?e=1596672000&v=beta&t=KCZj8lIvCIi2Z8QMDmHYqF0IV4uRhoqx9bybOhlPnl8">
             <h5>Dillon Fuchs</h5>
-            <p>Louisiana State University<p>
-            <p>B.S. Information Systems and Decision Sciences</p>
-            <p>Data Analytics Minor</p>
+            <b><p>Louisiana State University<p><b>
+            <br>B.S. Information Systems and Decision Sciences</p>
+            <br>Data Analytics Minor</p>
           </div>
         </div>
 
@@ -32,7 +32,7 @@
           <div class="callout primary">
             <div class="row column">
               <h1>Resume of Dillon Fuchs</h1>
-              <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics with hopes to move into Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
+              <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics. Then, I plan on pursuing a Masters Degree in Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
             </div>
           </div>
           <div class="row small-up-2 medium-up-3 large-up-4">
@@ -123,4 +123,3 @@
     </script>
   </body>
 </html>
-
