--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
           <div class="row column">
             <br>
             <img class="thumbnail" src="https://media-exp1.licdn.com/dms/image/C4E03AQFdhPg_89zfOA/profile-displayphoto-shrink_200_200/0?e=1596672000&v=beta&t=KCZj8lIvCIi2Z8QMDmHYqF0IV4uRhoqx9bybOhlPnl8">
-            <h5>Dillon Fuchs</h5>
-            <b><p>Louisiana State University<p><b>
-            <br>B.S. Information Systems and Decision Sciences</p>
-            <br>Data Analytics Minor</p>
+            <strong><h5>Dillon Fuchs</h5><strong>
+            <p>Louisiana State University
+            <br>B.S. Information Systems and Decision Sciences</br>
+            <br>Data Analytics Minor</br>
+            </p>
           </div>
         </div>
 
