--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             <img class="thumbnail" src="https://media-exp1.licdn.com/dms/image/C4E03AQFdhPg_89zfOA/profile-displayphoto-shrink_200_200/0?e=1596672000&v=beta&t=KCZj8lIvCIi2Z8QMDmHYqF0IV4uRhoqx9bybOhlPnl8">
             <strong><h5>Dillon Fuchs</h5><strong>
             <p>Louisiana State University
-            <br>B.S. Information Systems and Decision Sciences</br>
-            <br>Data Analytics Minor</br>
-            </p>
+            <br>B.S. Information Systems and Decision Sciences
+            <br>Data Analytics Minor</p>
           </div>
         </div>
 
@@ -124,3 +123,4 @@
     </script>
   </body>
 </html>
+
