--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
               <h1>Resume of Dillon Fuchs</h1>
               <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics. Then, I plan on pursuing a Masters Degree in Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
             </div>
+        <div class="blog-post">
+          <h3>Awesome blog post title <small>3/6/2015</small></h3>
+          <img class="thumbnail" src="https://placehold.it/850x350">
+          <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+          <div class="callout">
+            <ul class="menu simple">
+              <li><a href="#">Author: Mike Mikers</a></li>
+              <li><a href="#">Comments: 3</a></li>
+            </ul>
+          </div>
+            </div>
           </div>
           <div class="row small-up-2 medium-up-3 large-up-4">
             <div class="column">
@@ -123,4 +134,3 @@
     </script>
   </body>
 </html>
-
