--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             <br>
             <img class="thumbnail" src="https://media-exp1.licdn.com/dms/image/C4E03AQFdhPg_89zfOA/profile-displayphoto-shrink_200_200/0?e=1596672000&v=beta&t=KCZj8lIvCIi2Z8QMDmHYqF0IV4uRhoqx9bybOhlPnl8">
             <strong><h5>Dillon Fuchs</h5><strong>
-            <p>Louisiana State University
-            <br>B.S. Information Systems and Decision Sciences
-            <br>Data Analytics Minor
-              </p>
+            <p>Louisiana State University</p>
+            <p>B.S. Information Systems and Decision Sciences</p>
+            <p>Data Analytics Minor</p>
           </div>
         </div>
 
