--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p>Data Analytics Minor</p>
           </div>
         </div>
+      </div>
 
         <div class="off-canvas-content" data-off-canvas-content>
           <div class="title-bar hide-for-large">
@@ -35,7 +36,7 @@
               <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics. Then, I plan on pursuing a Masters Degree in Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
             </div>
           </div>
-          
+
           <div class="row small-up-2 medium-up-3 large-up-4">
 
             <div class="blog-post">
@@ -43,7 +44,7 @@
               <img class="thumbnail" src="https://placehold.it/850x350">
               <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
               </div>
-            
+
             <div class="column">
               <img class="thumbnail" src="https://placehold.it/550x550">
               <h5>My Site</h5>
