--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
           <div class="row column">
             <br>
-            <img class="thumbnail" src="https://media-exp1.licdn.com/dms/image/C4E03AQFdhPg_89zfOA/profile-displayphoto-shrink_200_200/0?e=1596672000&v=beta&t=KCZj8lIvCIi2Z8QMDmHYqF0IV4uRhoqx9bybOhlPnl8">
+            <img class="thumbnail" src="https://placehold.it/550x350">
             <strong><h5>Dillon Fuchs</h5><strong>
             <p>Louisiana State University</p>
             <p>B.S. Information Systems and Decision Sciences</p>
             <p>Data Analytics Minor</p>
           </div>
         </div>
-      </div>
+
 
         <div class="off-canvas-content" data-off-canvas-content>
           <div class="title-bar hide-for-large">
@@ -33,7 +33,7 @@
           <div class="callout primary">
             <div class="row column">
               <h1>Resume of Dillon Fuchs</h1>
-              <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics. Then, I plan on pursuing a Masters Degree in Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
+              <p class="lead">I recently graduated from Louisiana State University with a B.S. in Informtaion and Decision Sciences with a Data Analytics Minor. I am looking for work in Data Analytics. While working, I plan on pursuing a Masters Degree in Data Science. Specifically, I would like to work with Artificial Intelligence and Predictive Modeling.</p>
             </div>
           </div>
 
