--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dillon Fuchs Resume</title>
+    <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
   <body>
@@ -15,10 +15,8 @@
           <div class="row column">
             <br>
             <img class="thumbnail" src="https://placehold.it/550x350">
-            <strong><h5>Dillon Fuchs</h5><strong>
-            <p>Louisiana State University</p>
-            <p>B.S. Information Systems and Decision Sciences</p>
-            <p>Data Analytics Minor</p>
+            <h5>Mike Mikerson</h5>
+            <p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
           </div>
         </div>
 
