--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <br>
             <img class="thumbnail" src="https://placehold.it/550x350">
             <h5>Dillon Fuchs</h5>
-            <p>Louisiana State University</p>
-            <p>B.S. Information Systems and Decision Sciences</p>
-            <p>Data Analytics Minor</p>
+            <p>Louisiana State University
+            <br>B.S. Information Systems and Decision Sciences
+            <br>Data Analytics Minor</p>
           </div>
         </div>
 
