--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <br>
             <img class="thumbnail" src="https://placehold.it/550x350">
             <h5>Dillon Fuchs</h5>
-            <p>Louisiana State University
+            <p><b>Louisiana State University</b>
             <br>B.S. Information Systems and Decision Sciences
             <br>Data Analytics Minor</p>
           </div>
@@ -39,11 +39,18 @@
 
           <div class="row small-up-2 medium-up-3 large-up-4">
 
-            <div class="blog-post">
-              <h3>LSU ITS <small>3/6/2015</small></h3>
-              <img class="thumbnail" src="https://placehold.it/850x350">
-              <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-              </div>
+            <h2> Work Experience</h2>
+              <div class="blog-post">
+                <h3>  LSU ITS <small>November 2019 – March 2020</small></h3>
+                <img class="thumbnail" src="https://placehold.it/850x350">
+                <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+                </div>
+              
+              <div class="blog-post">
+                <h3>  Jacobs Engineering Group <small>June 2019 – October 2019</small></h3>
+                <img class="thumbnail" src="https://placehold.it/850x350">
+                <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+                </div>
 
             <div class="column">
               <img class="thumbnail" src="https://placehold.it/550x550">
