--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img class="thumbnail" src="https://placehold.it/550x350">
             <h5>Dillon Fuchs</h5>
             <p><b>Louisiana State University</b>
-            <br>B.S. Information Systems and Decision Sciences
-            <br>Data Analytics Minor</p>
+            <br>  B.S. Information Systems and Decision Sciences
+            <br>  Data Analytics Minor</p>
           </div>
         </div>
 
@@ -42,19 +42,24 @@
             <h2> Work Experience</h2>
               <div class="blog-post">
                 <h3>  LSU ITS <small>November 2019 – March 2020</small></h3>
-                <img class="thumbnail" src="https://placehold.it/850x350">
-                <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+                <h4>  Technical Support Analyst</h4>
+                <p>Collaborated with multiple teams of coworkers and helped facilitate communication between teams in order to find the best solution to a wide array of technical and nontechnical issues</p>
+                <p>Trained employees on different ways to troubleshoot various issues and what steps to take if certain processes did not work</p>
+                <p>Worked regularly with Active Directories, Cherwell Service Management, and IBM Mainframe</p>
                 </div>
-              
+
               <div class="blog-post">
                 <h3>  Jacobs Engineering Group <small>June 2019 – October 2019</small></h3>
-                <img class="thumbnail" src="https://placehold.it/850x350">
-                <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+                <h4>  Technical Support Analyst</h4>
+                <p>Communicated with customers of varying technical ability to troubleshoot and decipher their issue over the phone and through chats</p>
+                <p>Participated in meetings with co-workers and upper management to run the Service Desk team more efficiently</p>
+                <p>Trained new employees on troubleshooting methods and the systems installed to effectively communicate with the team</p>
+                <p>Worked constantly with Active Directories, Oracle applications, Employee Directories, Microsoft applications, Network Services, and various other applications</p>
                 </div>
 
             <div class="column">
               <img class="thumbnail" src="https://placehold.it/550x550">
-              <h5>My Site</h5>
+              <h5>Louisiana State University</h5>
             </div>
             <div class="column">
               <img class="thumbnail" src="https://placehold.it/550x550">
